Fix form input hidden text on Safari

--- a/app/assets/stylesheets/components/_forms.scss
+++ b/app/assets/stylesheets/components/_forms.scss
@@ -5,7 +5,9 @@
 .form-control {
   border: 1px solid #bbb;
   box-shadow: none;
-  padding: 18px 15px;
+  padding: 15px 15px;
+  line-height: 1;
+  height: auto;
 }
 
 .control-label {
